fixed and added transactiontests